# mini-data-platform

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci-mkdocs.yml
airflow/: .flake8  .pre-commit-config.yaml  example.py  pyproject.toml
airflow/mini_dags/: example.py
airflow/mini_dags/chester/: dag.py  filters.py  macros.py
airflow/mini_dags/chester/alerts/: __init__.py
airflow/mini_dags/chester/utils/: dates.py  udf.py
airflow/mini_dags/dags/: example.py
docs/: index.md  project-context.md  roadmap.md
docs/helms/: airflow.md
docs/implementation-artifacts/: 2-6-update-terraform-argocd-application-and-wiring.md  2-7-deploy-and-verify-airflow-3-0-end-to-end.md  3-1-clean-state-reproducibility-test.md  3-2-resource-footprint-and-secret-hygiene-verification.md  3-4-regenerate-documentation.md  deferred-work.md  k8s-133-api-audit.md  sprint-status.yaml
docs/planning-artifacts/: epics.md
docs/runbooks/: clean-state-bring-up.md
docs/terraform/: main.md
helms/: .pre-commit-config.yaml  .yamllint
helms/airflow/: Chart.yaml  README.md  README.md.gotmpl  index.html  values.yaml
implementation-artifacts/2-6-update-terraform-argocd-application-and-wiring/: index.html
implementation-artifacts/2-7-deploy-and-verify-airflow-3-0-end-to-end/: index.html
project-context/: index.html
roadmap/: index.html
scripts/: helm_docs.sh  terraform_docs.sh
search/: search_index.json
stylesheets/: extra.css
terraform/: .pre-commit-config.yaml  .terraform-docs.yml
(+55 files in other folders)
