[tool.poetry]
name = "mini_dags"
version = "0.0.1"
description = "Mini Data Platform DAGs"
authors = ["afranzi"]

[tool.poetry.dependencies]
python = ">=3.10.8,<3.11"
apache-airflow = "^2.8.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.13.0"
pre-commit = "^3.6.2"
mypy = "^1.8.0"
black = "^24.2.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "B008", "W503"]
max-line-length = 120
max-cognitive-complexity = 12
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-p no:warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# In pre-commit, you need to specifcy the path to the pyproject.toml in args: args: [--config-file=pyproject.toml ]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
disable_error_code = "call-arg"

[[tool.mypy.overrides]]
module = [
    "airflow.providers.*",
    "airflow.*",
]
ignore_missing_imports = true
